@@ -1,7 +1,8 @@
 Dosage 2.2 (released xx.xx.2013)
 
 Features:
-- comic: Added ARedTailsDream, Carciphona, Curtailed, GirlGenius.
+- comic: Added ARedTailsDream, Carciphona, Curtailed, GirlGenius,
+  Lackadaisy.
   Patch by Dirk Reiners
 
 Changes:
